--- a/translations/kangyur/translations/091-043_toh646,1080-the_dharani_of_refuge_for_the_preta_flaming_mouth.xml
+++ b/translations/kangyur/translations/091-043_toh646,1080-the_dharani_of_refuge_for_the_preta_flaming_mouth.xml
@@ -36,7 +36,7 @@
                                         Canti</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -182,6 +182,9 @@
                 </change>
                 <change who="#john" when="2023-11-13T15:06:49.451Z" type="text-version" status="1.0.2" xml:id="UT22084-091-043-1223">
                     <desc>Added notes and material to intro.</desc>
+                </change>
+                <change who="#andre" when="2023-11-24T15:52:57.973Z" type="text-version" status="1.0.3" xml:id="UT22084-091-043-1225">
+                    <desc>Glossary revised and integrated in CG</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -1041,7 +1044,7 @@
                                                 New York Press, 2002.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-091-043-83">
@@ -1184,19 +1187,28 @@
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-091-043-94">
-                                                  <term type="translationMain">lay devotee</term>
+                                                  <term type="translationMain">male lay devotee</term>
                                                   <term xml:lang="Sa-Ltn" type="sourceUnspecified">upāsaka</term>
-                                                  <term xml:lang="Sa-Ltn" type="sourceUnspecified">upāsikā</term>
                                                   <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dge bsnyen</term>
                                                   <term xml:lang="bo" type="attestedSource" n="1">དགེ་བསྙེན།</term>
-                                                  <term xml:lang="Bo-Ltn" type="attestedSource" n="2">dge bsnyen ma</term>
-                                                  <term xml:lang="bo" type="attestedSource" n="2">དགེ་བསྙེན་མ།</term>
+                                                  <term type="translationAlternative">male</term>
                                                   <note type="definition">
-                                                  <p>A male (<foreign xml:lang="Sa-Ltn">upāsaka</foreign>) or female (<foreign xml:lang="Sa-Ltn">upāsikā</foreign>) practitioner
-                                                  who has taken vows to uphold the five
+                                                  <p>A male practitioner who has taken vows to uphold the five
                                                   precepts.</p>
                                                   </note>
                                                 </gloss>
+                    </item>
+                                    <item>
+                        <gloss type="term" xml:id="UT22084-091-043-1224">
+                                        <term type="translationMain">female lay devotee</term>
+                                        <term xml:lang="Sa-Ltn" type="sourceUnspecified">upāsikā</term>
+                                        <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dge bsnyen ma</term>
+                                        <term xml:lang="bo" type="attestedSource" n="1">དགེ་བསྙེན་མ།</term>
+                                        <note type="definition">
+                                            <p>A female practitioner who has taken vows to uphold the five
+                                                precepts.</p>
+                                        </note>
+                                    </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-091-043-95">
@@ -1313,17 +1325,15 @@
                                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-091-043-1107">
-                                                <term type="translationMain">Ānanda</term>
-                                                <term xml:lang="Sa-Ltn" type="sourceUnspecified">Ānanda</term>
-                                                <term xml:lang="Bo-Ltn" type="attestedSource" n="1">kun dga’ bo</term>
-                                                <term xml:lang="bo" type="attestedSource" n="1">ཀུན་དགའ་བོ།</term>
-                                                <note type="definition">
-                                                        <p>The Buddha’s cousin, chief attendant, an important śrāvaka disciple who 
-                                                                was made responsible for memorizing and reciting many of the
-                                                                Buddha’s discourses.</p>
-                                                </note>
-                                        </gloss>
+                        <gloss xml:id="UT22084-091-043-1107" type="person" mode="match">
+                            <term type="translationMain">Ānanda</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">ānanda</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">kun dga’ bo</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">ཀུན་དགའ་བོ།</term>
+                            <note type="definition" rend="override">
+                                <p>The Buddha’s cousin, chief attendant, an important śrāvaka disciple who was made responsible for memorizing and reciting many of the Buddha’s discourses.</p>
+                            </note>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="person" xml:id="UT22084-091-043-1108">
