--- a/translations/kangyur/translations/091-044_toh647,1079-the_bali_ritual_to_relieve_the_female_preta_burning_mouth.xml
+++ b/translations/kangyur/translations/091-044_toh647,1079-the_bali_ritual_to_relieve_the_female_preta_burning_mouth.xml
@@ -38,7 +38,7 @@
                                         Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -182,6 +182,9 @@
                 </change>
                 <change who="#john" when="2023-11-13T15:07:50.8Z" type="text-version" status="1.0.2" xml:id="UT22084-091-044-1224">
                     <desc>Added notes and material to intro.</desc>
+                </change>
+                <change who="#andre" when="2023-11-24T16:27:16.344Z" type="text-version" status="1.0.3" xml:id="UT22084-091-044-1225">
+                    <desc>Glossary matching revised and activated in CG</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -1242,17 +1245,15 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-091-044-110">
-                                                  <term type="translationMain">Ānanda</term>
-                                                  <term xml:lang="Sa-Ltn" type="sourceUnspecified">ānanda</term>
-                                                  <term xml:lang="Bo-Ltn" type="attestedSource" n="1">kun dga’ bo</term>
-                                                  <term xml:lang="bo" type="attestedSource" n="1">ཀུན་དགའ་བོ།</term>
-                                                <note type="definition">
-                                                        <p>The main protagonist in this text. The Buddha’s cousin, chief attendant, an important śrāvaka disciple who 
-                                                                was made responsible for memorizing and reciting many of the
-                                                                Buddha’s discourses.</p>
-                                                </note>
-                                        </gloss>
+                        <gloss xml:id="UT22084-091-044-110" type="person" mode="match">
+                            <term type="translationMain">Ānanda</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">ānanda</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">kun dga’ bo</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">ཀུན་དགའ་བོ།</term>
+                            <note type="definition" rend="override">
+                                <p>The main protagonist in this text. The Buddha’s cousin, chief attendant, an important śrāvaka disciple who was made responsible for memorizing and reciting many of the Buddha’s discourses.</p>
+                            </note>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="person" xml:id="UT22084-091-044-1106">
