--- a/translations/kangyur/placeholders/066-012_toh254-the_sutra_of_dharmaketu.xml
+++ b/translations/kangyur/placeholders/066-012_toh254-the_sutra_of_dharmaketu.xml
@@ -5,20 +5,21 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Dharmaketu</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">dharmaketusūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Dharmaketusūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">chos kyi rgyal mtshan gyi mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryadharmaketumahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryadharmaketumahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos kyi rgyal mtshan gyi mdo theg pa chen pa'o</title>
-                <author role="translatorMain" ref="eft:team-61"/>
-                <consultant role="projectManager" ref="eft:person-361">Bhikṣuṇī Thubten Damcho</consultant>
-                <author role="translatorEng" ref="eft:person-361">Bhikṣuṇī Thubten Damcho</author>
-                <author role="translatorEng" ref="eft:person-435">Norbu Samphel </author>
+                <author role="translatorMain" xml:id="UT22084-066-012-1"/>
+                <consultant role="projectManager" xml:id="UT22084-066-012-2">Bhikṣuṇī Thubten Damcho</consultant>
+                <author role="translatorEng" xml:id="UT22084-066-012-3">Bhikṣuṇī Thubten Damcho</author>
+                <editor role="reviser" xml:id="UT22084-066-012-4">Norbu Samphel</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.10 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-066-012"/>
                 <date/>
             </publicationStmt>
@@ -33,18 +34,48 @@
                     <idno source-id="O1JC114941JC11906" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-30T14:42:00.876Z" user="admin">30/05/2023 14:42:00</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-12-25T17:17:57.903Z" user="john">Translation of title changed</note>
-                <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:24:18.797Z" user="line-tofte">4</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-01T09:24:18.797Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="3" date-time="2023-05-11T13:38:35.538Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2023-05-11T13:38:35.538Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2023-05-11T13:39:10.224Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-11T13:39:34.382Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2023-05-30T14:41:56.425Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2023-05-30T14:41:56.425Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2020-12-25T17:17:57.903Z" type="text-version" status="0.0.2" xml:id="UT22084-066-012-5">
+                    <desc>Translation of title changed</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-01T09:24:18.797Z" type="translation-status" status="4" xml:id="UT22084-066-012-6">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-01T09:24:18.797Z" type="text-version" status="0.0.3" xml:id="UT22084-066-012-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:38:35.538Z" type="translation-status" status="3" xml:id="UT22084-066-012-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:38:35.538Z" type="text-version" status="0.0.4" xml:id="UT22084-066-012-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:39:10.224Z" type="text-version" status="0.0.5" xml:id="UT22084-066-012-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:39:34.382Z" type="text-version" status="0.0.6" xml:id="UT22084-066-012-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-30T14:41:56.425Z" type="translation-status" status="2.h" xml:id="UT22084-066-012-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-30T14:41:56.425Z" type="text-version" status="0.0.7" xml:id="UT22084-066-012-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-30T14:42:44.109Z" type="text-version" status="0.0.8" xml:id="UT22084-066-012-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.9" xml:id="UT22084-066-012-15">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-27T11:46:20.849Z" type="translation-status" status="2.g" xml:id="UT22084-066-012-16">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-27T11:46:20.849Z" type="text-version" status="0.0.10" xml:id="UT22084-066-012-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
