--- a/translations/kangyur/placeholders/075-004_toh346-the_account_of_the_noble_deeds_of_sumagadha.xml
+++ b/translations/kangyur/placeholders/075-004_toh346-the_account_of_the_noble_deeds_of_sumagadha.xml
@@ -5,7 +5,7 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Account of the Noble Deeds of Sumāgadhā</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sumāgadhāvadāna</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Sumāgadhāvadāna</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">ma ga d+hA bzang mo'i rtogs pa brjod pa/</title>
                 <author role="translatorMain" xml:id="UT22084-075-004-1">Sakya Pandita Translation Group</author>
                 <consultant role="projectManager" xml:id="UT22084-075-004-2">Rev. Dr. Ani Kunga Chodron</consultant>
@@ -16,12 +16,12 @@
                 <editor role="projectEditor" xml:id="UT22084-075-004-21">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2023</date>
+                <edition>v 0.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-075-004"/>
                 <date/>
             </publicationStmt>
@@ -69,6 +69,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-25T13:29:59.389Z" type="text-version" status="0.0.8" xml:id="UT22084-075-004-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-27T11:52:03.573Z" type="translation-status" status="2.e" xml:id="UT22084-075-004-25">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-27T11:52:03.573Z" type="text-version" status="0.0.9" xml:id="UT22084-075-004-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
