--- a/translations/kangyur/translations/061-006_toh186_miracle_of_attaining_the_buddhas_powers.xml
+++ b/translations/kangyur/translations/061-006_toh186_miracle_of_attaining_the_buddhas_powers.xml
@@ -26,7 +26,7 @@
                 <consultant role="projectManager" xml:id="UT22084-061-006-306">Gregory Forgues</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.33.29 <date>2023</date>
+                <edition>v 1.33.30 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -174,6 +174,9 @@
                 <change who="#konchog" when="2023-11-15T16:49:05.802Z" type="text-version" status="1.33.29" xml:id="UT22084-061-006-341">
                     <desc>Fixed capitalization of title throughout.</desc>
                 </change>
+                <change who="#martina-cotter" when="2023-11-27T18:28:27.193Z" type="text-version" status="1.33.30" xml:id="UT22084-061-006-344">
+                    <desc>Added pending links.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -304,12 +307,16 @@
                                 chapters are independent works. See the 84000 reading room section of the <title xml:lang="Sa-Ltn">
                                 <ref target="https://read.84000.co/knowledgebase/ornaments-buddhas.html">Buddhāvataṃsaka</ref>
                             </title>.</note> six sūtras
-                        from the <title xml:lang="Sa-Ltn">Ratnakūṭa</title>, the <title xml:lang="Sa-Ltn">Tathāgatācintya­guhya­nirdeśa</title> (Toh
-                            47)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh47.html"/>, <title xml:lang="Sa-Ltn">Bodhi­sattva­piṭaka</title> (Toh 56)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh56.html"/>, <title xml:lang="Sa-Ltn">Bhadra­māyākāra­vyākaraṇa</title> (Toh
+                        from the <title xml:lang="Sa-Ltn">Ratnakūṭa</title>, <title xml:lang="en">The Secrets of the Realized Ones</title> (<title xml:lang="Sa-Ltn">Tathāgatācintya­guhya­nirdeśa</title>, Toh
+                        47),<note place="end" xml:id="UT22084-061-006-342">David Fiordalis and Dharmachakra Translation Committee, trans., <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh47.html">The Secrets of the Realized Ones
+                            </ref>
+                            </title>, Toh 47 (84000: Translating the Words of the 
+                            Buddha, 2023).</note> <title xml:lang="Sa-Ltn">Bodhi­sattva­piṭaka</title> (Toh 56)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh56.html"/>, <title xml:lang="Sa-Ltn">Bhadra­māyākāra­vyākaraṇa</title> (Toh
                             65)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh65.html"/>, <title xml:lang="Sa-Ltn">Mahā­pratihārya­nirdeśa</title> (Toh 66)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh66.html"/>, <title xml:lang="Sa-Ltn">Maitreya­mahā­siṃha­nāda</title> (Toh
-                        67)<note place="end" xml:id="UT22084-061-006-294">See Karen Liljenberg and Ulrich Pagel. trans. <title xml:lang="en">
+                        67),<note place="end" xml:id="UT22084-061-006-294">See Karen Liljenberg and Ulrich Pagel. trans. <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh67.html">The Great Lion’s Roar of Maitreya</ref>
-                            </title>, Toh 67 (2023).</note>, and <title xml:lang="Sa-Ltn">Acintya­buddha­viśaya­nirdeśa</title> (Toh 79)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh79.html"/>; and twenty-eight sūtras from the <title xml:lang="Bo-Ltn">mdo
+                            </title>, Toh 67 (2023).</note> and <title xml:lang="Sa-Ltn">Acintya­buddha­viśaya­nirdeśa</title> (Toh 79)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh79.html"/>; and twenty-eight sūtras from the <title xml:lang="Bo-Ltn">mdo
                                 sde</title>, the <title xml:lang="Sa-Ltn">Bhadra­kalpika</title> (Toh 94),<note place="end" xml:id="UT22084-061-006-290">See
                                     Dharmachakra Translation Committee, trans. <title xml:lang="en">
                                         <ref target="https://read.84000.co/translation/toh94.html">The Good Eon</ref>
@@ -1317,6 +1324,12 @@
                         2022.</bibl>
                     <bibl xml:id="UT22084-061-006-120">Edgerton, Franklin. <title xml:lang="en">Buddhist Hybrid Sanskrit Grammar and
                             Dictionary</title>. Vol. 2: Dictionary. New Haven: Yale University Press, 1953.</bibl>
+                    <bibl xml:id="UT22084-061-006-343">Fiordalis, David. and Dharmachakra Translation Committee,  trans. 
+                        <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh47.html">The Secrets of the Realized Ones
+                        </ref>
+                        </title> 
+                        (Toh 47). 84000: Translating the Words of the Buddha, 2023.</bibl>
                     <bibl xml:id="UT22084-061-006-121">La Vallée Poussin, Louis de, trans. <title xml:lang="en">Abhidharmakośabhāṣya of
                             Vasubandhu</title>. Berkeley: Asian Humanities Press, 1988–90.</bibl>
                     <bibl xml:id="UT22084-061-006-122">Lamotte, Etienne, trans. <title xml:lang="en">Śūraṃgamasamādhisūtra: The Concentration of
