--- a/translations/kangyur/translations/091-063_toh666-the_tantra_of_ganapati.xml
+++ b/translations/kangyur/translations/091-063_toh666-the_tantra_of_ganapati.xml
@@ -22,7 +22,7 @@
                 <consultant role="dharmaMaster" xml:id="UT22084-091-063-403">Chokyi Nyima Rinpoche</consultant>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -150,6 +150,12 @@
                 <change who="#martina-cotter" when="2023-11-14T13:53:49.686Z" type="text-version" status="1.0.2" xml:id="UT22084-091-063-408">
                     <desc>updated glossary.</desc>
                 </change>
+                <change who="#celso" when="2023-11-21T23:26:28.648Z" type="text-version" status="1.0.3" xml:id="UT22084-091-063-409">
+                    <desc>Corrected links to rKTs</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-27T18:30:21.009Z" type="text-version" status="1.0.4" xml:id="UT22084-091-063-411">
+                    <desc>Added pending links.</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -231,8 +237,9 @@
               important Buddhist archeological site, see Pia Brancaccio 2011.</note> The level of
             Buddhist participation in the Gaṇapati cult in India requires more research, but it is
             supported by the existence of Gaṇapati shrines such as the one found at the Aurangabad
-            cave complex. Both works devoted to this deity in the Tibetan Kangyurs—<title xml:lang="en">The Tantra of Great Gaṇapati</title> (Toh 666) and <title xml:lang="en">The Heart Mantra of Gaṇapati</title> (Toh 665)<ref inst="untoggle the following comment" rend="pending" target="https://read.84000.co/translation/toh665.html"/>
-            <!--<note xml:id="" place="end">Dharmachakra Translation Committee, trans., <title xml:lang="en"><ref rend="pending" target="https://read.84000.co/translation/toh665.html">The Heart Mantra of Gaṇapati</ref></title>, Toh 665/Toh 1084 (84000: Translating the Words of the Buddha, 2023).</note>-->
+            cave complex. Both works devoted to this deity in the Tibetan Kangyurs—<title xml:lang="en">The Tantra of Great Gaṇapati</title> (Toh 666) and <title xml:lang="en">The Heart Mantra of Gaṇapati</title> (Toh 665)<note place="end" xml:id="UT22084-091-063-410">Dharmachakra Translation Committee, trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh665.html">The Heart Mantra of Gaṇapati</ref>
+                            </title>, Toh 665/Toh 1084 (84000: Translating the Words of the Buddha, 2023).</note>
             —provide additional textual evidence of his importance to Indian Buddhist traditions. </p>
           <milestone unit="chunk" xml:id="UT22084-091-063-52"/>
           <p tid="12">While <title xml:lang="en">The Heart Mantra of Gaṇapati</title> appears in the
@@ -1467,8 +1474,8 @@
               mo</title>). Sarnath: Dictionary Unit, Central Institute of Higher Tibetan Studies,
             1993. </bibl>
           <bibl xml:id="UT22084-091-063-266">
-                        <title xml:lang="en">Resources for Kanjur &amp; Tenjur
-              Studies</title>, Universität Wien, accessed May 31, 2019. <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/sub/index.php">https://www.istb.univie.ac.at/kanjur/rktsneu/sub/index.php</ref>.</bibl>
+                        <title xml:lang="en">Resources for Kanjur and Tanjur
+            Studies</title>, Universität Wien, accessed May 31, 2019. <ref target="http://www.rkts.org/">http://www.rkts.org</ref>.</bibl>
           <bibl xml:id="UT22084-091-063-267">
                         <title xml:lang="en">The Buddhist Canons Research
               Database</title>. American Institute of Buddhist Studies and Columbia University
