--- a/translations/kangyur/translations/091-064_toh667-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/translations/091-064_toh667-the_tantra_of_mahakala.xml
@@ -23,7 +23,7 @@
         <editor role="finalReviewer" xml:id="UT22084-091-064-265">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.5 <date>2023</date>
+                <edition>v 1.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -170,6 +170,9 @@
                     <desc>updated milestone 1.2.</desc>
                 </change>
                 <change who="#martina-cotter" when="2023-11-27T18:31:28.016Z" type="text-version" status="1.0.5" xml:id="UT22084-091-064-276">
+                    <desc>Added pending links.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-27T18:32:38.556Z" type="text-version" status="1.0.6" xml:id="UT22084-091-064-277">
                     <desc>Added pending links.</desc>
                 </change>
       </revisionDesc>
