--- a/translations/kangyur/translations/091-067_toh670,1087-incantation_of_mahakali.xml
+++ b/translations/kangyur/translations/091-067_toh670,1087-incantation_of_mahakali.xml
@@ -34,7 +34,7 @@
                                         Doctor</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -192,6 +192,12 @@
                 <change who="#konchog" when="2023-11-17T15:14:53.372Z" type="text-version" status="1.0.1" xml:id="UT22084-091-067-146">
                     <desc>One fix: changed single to double quotation marks in the main translation.</desc>
                 </change>
+                <change who="#celso" when="2023-11-21T23:26:28.648Z" type="text-version" status="1.0.2" xml:id="UT22084-091-067-147">
+                    <desc>Corrected links to rKTs</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-27T18:33:27.877Z" type="text-version" status="1.0.3" xml:id="UT22084-091-067-149">
+                    <desc>Added pending links.</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -260,7 +266,7 @@
                                                 teaching. Within the Kangyur, the text is part of a
                                                 small group of texts concerned with Śrīdevī Mahākālī
                                                 and Rematī.<note place="end" xml:id="UT22084-091-067-58"> The texts in this
-                                                  group are Toh 670,<ref rend="pending" target="http://read.84000.co/translation/toh670.html"/> Toh 671,<ref rend="pending" target="http://read.84000.co/translation/toh671.html"/> Toh 672,<ref rend="pending" target="http://read.84000.co/translation/toh672.html"/> Toh 840,<ref rend="pending" target="http://read.84000.co/translation/toh840.html"/> Toh 842,<ref rend="pending" target="http://read.84000.co/translation/toh842.html"/> and <ref target="http://read.84000.co/translation/toh1090.html">Toh 1090/1777</ref>. While a detailed analysis of
+                                                  group are Toh 670, Toh 671,<ref rend="pending" target="http://read.84000.co/translation/toh671.html"/> Toh 672,<ref rend="pending" target="http://read.84000.co/translation/toh672.html"/> Toh 840,<ref rend="pending" target="http://read.84000.co/translation/toh840.html"/> Toh 842,<ref rend="pending" target="http://read.84000.co/translation/toh842.html"/> and <ref target="http://read.84000.co/translation/toh1090.html">Toh 1090/1777</ref>. While a detailed analysis of
                                                   the provenance of these texts is beyond the scope
                                                   of this introduction, we may briefly note that
                                                   none of these works has a translator’s colophon.
@@ -275,9 +281,10 @@
                                                   iconography found new expressions within the
                                                   unfolding Tibetan Buddhist idiom.</note>
                                                 <title xml:lang="en">The Dhāraṇī of Devī Mahākālī
-                                                </title>also bears some similarity to <title xml:lang="en">The Dhāraṇī of Mahākāla</title> (Toh
-                                                  668)<ref inst="untoggle the following comment" rend="pending" target="https://read.84000.co/translation/toh668.html"/>
-                                                <!--<note xml:id="" place="end">Dharmachakra Translation Committee, trans., <title xml:lang="en"><ref rend="pending" target="https://read.84000.co/translation/toh668.html">The Dhāraṇī of Mahākāla</ref></title>, Toh 668/Toh 1085 (84000: Translating the Words of the Buddha, 2023).</note>-->
+                                                </title>also bears some similarity to <title xml:lang="en">The Dhāraṇī of Glorious Mahākāla</title> (Toh
+                                                668)<note place="end" xml:id="UT22084-091-067-148">Dharmachakra Translation Committee, trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh668.html">The Dhāraṇī of Glorious Mahākāla</ref>
+                            </title>, Toh 668/Toh 1085 (84000: Translating the Words of the Buddha, 2023).</note>
                                                 in terms of the setting in which the dhāraṇī is
                                                 delivered and the various medical ailments for which
                                                 it is prescribed.</p>
@@ -349,7 +356,7 @@
                                                   objects of Mahākālī’s dhāraṇī are not made
                                                   explicit here, but the close relationship between
                                                   this text and <title xml:lang="en">The Dhāraṇī of
-                                                  Glorious Mahākāla</title> (Toh 668/1085),<ref rend="pending" target="http://read.84000.co/translation/toh668.html"/> might allow us to supply the following list of
+                                                  Glorious Mahākāla</title> (Toh 668/1085), might allow us to supply the following list of
                                                   beings that are bound by Devī Mahākālī’s <foreign xml:lang="Sa-Ltn" type="term">dhāraṇī</foreign> as
                                                   “all beings that cause illnesses and diseases, all
                                                   grahas, beings that cause plague, bhūtas, and
@@ -513,9 +520,9 @@
                                                   Dictionary Unit, Central Institute of Higher
                                                   Tibetan Studies, 1993. </bibl>
                                                 <bibl xml:id="UT22084-091-067-102">
-                            <title xml:lang="en">Resources for Kanjur &amp; Tenjur
+                            <title xml:lang="en">Resources for Kanjur and Tanjur
                                                   Studies</title>, Universität Wien, accessed June
-                                                  11, 2019. <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/sub/index.php">https://www.istb.univie.ac.at/kanjur/rktsneu/sub/index.php</ref>.</bibl>
+                                                        11, 2019. <ref target="http://www.rkts.org/">http://www.rkts.org</ref>.</bibl>
                                                 <bibl xml:id="UT22084-091-067-103">
                             <title xml:lang="en">The Buddhist Canons Research
                                                   Database</title>. American Institute of Buddhist
