--- a/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
+++ b/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
@@ -24,7 +24,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-101-146-286">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.11 <date>2023</date>
+                <edition>v 1.1.12 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -219,6 +219,9 @@
                 <change who="#martina-cotter" when="2023-11-13T19:23:40.665Z" type="text-version" status="1.1.11" xml:id="UT22084-101-146-338">
                     <desc>added new definitions.</desc>
                 </change>
+                <change who="#martina-cotter" when="2023-11-27T18:34:55.623Z" type="text-version" status="1.1.12" xml:id="UT22084-101-146-339">
+                    <desc>Added pending links.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -247,7 +250,7 @@
                         short praise to the goddess known as Śrīdevī Mahākālī. According to <title xml:lang="en">The Tantra of the Flaming Ḍākinī</title>
                             (<title xml:lang="Bo-Ltn">mkha’ ’gro ma me lce ’bar ba’i rgyud</title>, Toh 842)<ref rend="pending" target="https://read.84000.co/translation/toh842.html"/>, which recounts the origin story of this goddess and her attendant (and
                         half-sister) Rematī, the two are protectors of the Dharma who have taken vows to guard the followers of the Buddha’s teaching.<note place="end" xml:id="UT22084-101-146-219"> The two goddesses are half-sisters, since Mahādeva is the father of both of them.</note>
-                        Within the Kangyur, the praise is part of a group of small group of texts concerned with Śrīdevī Mahākālī and Rematī.<note place="end" xml:id="UT22084-101-146-220"> The texts belonging to this group are Toh 670<ref rend="pending" target="https://read.84000.co/translation/toh670.html"/>, Toh 671<ref rend="pending" target="https://read.84000.co/translation/toh671.html"/>, Toh 672<ref rend="pending" target="https://read.84000.co/translation/toh672.html"/>, Toh 840<ref rend="pending" target="https://read.84000.co/translation/toh840.html"/>, Toh 842<ref rend="pending" target="https://read.84000.co/translation/toh842.html"/>, and Toh 1090/1777. While a detailed analysis of the provenance of this
+                        Within the Kangyur, the praise is part of a group of small group of texts concerned with Śrīdevī Mahākālī and Rematī.<note place="end" xml:id="UT22084-101-146-220"> The texts belonging to this group are <ref target="https://read.84000.co/translation/toh670.html">Toh 670</ref>, Toh 671<ref rend="pending" target="https://read.84000.co/translation/toh671.html"/>, Toh 672<ref rend="pending" target="https://read.84000.co/translation/toh672.html"/>, Toh 840<ref rend="pending" target="https://read.84000.co/translation/toh840.html"/>, Toh 842<ref rend="pending" target="https://read.84000.co/translation/toh842.html"/>, and Toh 1090/1777. While a detailed analysis of the provenance of this
                             group of texts is beyond the scope of this introduction, we may briefly note that none of these works has a translator’s colophon.
                             Therefore, their status as translated texts from Sanskrit cannot be verified. Indeed, this group of texts devoted to Śrīdevī
                             Mahākālī and Rematī likely first began to circulate not in India but rather in late eighth- or early ninth-century Tibet, where they
