--- a/translations/kangyur/translations/091-067_toh670,1087-incantation_of_mahakali.xml
+++ b/translations/kangyur/translations/091-067_toh670,1087-incantation_of_mahakali.xml
@@ -34,7 +34,7 @@
                                         Doctor</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -198,6 +198,9 @@
                 <change who="#martina-cotter" when="2023-11-27T18:33:27.877Z" type="text-version" status="1.0.3" xml:id="UT22084-091-067-149">
                     <desc>Added pending links.</desc>
                 </change>
+                <change who="#andre" when="2023-11-28T08:57:22.265Z" type="text-version" status="1.0.4" xml:id="UT22084-091-067-150">
+                    <desc>A couples of typos have been fixed.</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -342,7 +345,7 @@
                                                 Blessed One three times and sat to one side. </p>
                                         <milestone unit="chunk" xml:id="UT22084-091-067-68"/>
                                         <p tid="22">Devī Mahākālī then addressed the Blessed One,
-                                                saying, “THonorable One, were I to offer this vidyā
+                                                saying, “Honorable One, were I to offer this vidyā
                                                 in homage at the Blessed One’s feet, would the
                                                 Blessed One please accept my vidyā?”<note place="end" xml:id="UT22084-091-067-69"> D and S:
                                                   <foreign xml:lang="Bo-Ltn" type="quote">bdag gi
@@ -351,7 +354,7 @@
                                                   translation for clarity. </note>
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-091-067-70"/>
-                                        <p tid="23">The Blessed One replied, “TDevī Mahākālī—the Wife
+                                        <p tid="23">The Blessed One replied, “Devī Mahākālī—the Wife
                                                 of the Demon and Yama’s Sister—will bind beings<note place="end" xml:id="UT22084-091-067-71"> The
                                                   objects of Mahākālī’s dhāraṇī are not made
                                                   explicit here, but the close relationship between
