--- a/translations/kangyur/placeholders/043-012_toh75-the_sutra_of_gangottaras_questions.xml
+++ b/translations/kangyur/placeholders/043-012_toh75-the_sutra_of_gangottaras_questions.xml
@@ -16,12 +16,12 @@
                 <editor role="projectEditor" xml:id="UT22084-043-012-34">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.16 <date>2023</date>
+                <edition>v 0.0.17 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-043-012"/>
                 <date/>
             </publicationStmt>
@@ -111,6 +111,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-15T08:38:05.119Z" type="text-version" status="0.0.16" xml:id="UT22084-043-012-37">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-28T11:54:43.45Z" type="translation-status" status="2.a" xml:id="UT22084-043-012-38">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-28T11:54:43.45Z" type="text-version" status="0.0.17" xml:id="UT22084-043-012-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
