--- a/translations/kangyur/translations/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
+++ b/translations/kangyur/translations/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
@@ -19,7 +19,7 @@
                                         mdo</title>
                 <author role="translatorMain" xml:id="UT22084-034-015-68">Translated by the
                                         Indo-Tibetan Studies Translation Group,
-                                        Visva-Bharati<lb/>under the patronage and supervision of
+                                        Visva-Bharati,<lb/>under the patronage and supervision of
                                         84000: Translating the Words of the Buddha</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-034-015-69">Geshe Dakpa Kalsang</consultant>
                 <consultant role="projectManager" xml:id="UT22084-034-015-70">Sanjib Kumar Das</consultant>
@@ -32,7 +32,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-015-114">Ryan Damron</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.4 <date>2023</date>
+                <edition>v 1.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -194,6 +194,9 @@
                 <change who="#martina-cotter" when="2023-10-20T14:17:27.646Z" type="text-version" status="1.0.4" xml:id="UT22084-034-015-122">
                     <desc>Added pending links.</desc>
                 </change>
+                <change who="#konchog" when="2023-11-28T14:51:19.216Z" type="text-version" status="1.0.5" xml:id="UT22084-034-015-123">
+                    <desc>A couple small fixes.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -318,7 +321,7 @@
                                                 in Tibet. It was translated into English with the
                                                 other condensed prajñāpāramitā sūtras by Edward
                                                 Conze, who assumes that it dates from the “Tantric
-                                                period,” after 750 <hi rend="small-caps">ce</hi>.<note place="end" xml:id="UT22084-034-015-11"> Conze (1973), p.
+                                                period,” after 750 <hi rend="small-caps">ce</hi>.<note place="end" xml:id="UT22084-034-015-11"> Conze 1973, p.
                                                   iv.</note> A contemporary translation into Chinese
                                                 was published by the Kumarajiva Project in
                                                   2020.<note place="end" xml:id="UT22084-034-015-12">
@@ -374,7 +377,7 @@
                                                 bodhisattvas are there?” asked Candragarbha.</p>
                                         <p tid="25">“Son of a good family,” replied the Blessed One,
                                                 “there are two types of the bodhisattvas’
-                                                perfections of wisdom—contaminated and
+                                                perfections of wisdom: contaminated and
                                                 uncontaminated. </p>
                                         <milestone unit="chunk" xml:id="UT22084-034-015-23"/>
                                         <p tid="26">“Son of a good family, <distinct>contaminated
@@ -433,7 +436,7 @@
                                                 perfection of wisdom:</p>
                                         <milestone unit="chunk" xml:id="UT22084-034-015-30"/>
                                         <p rend="mantra" tid="31">
-                        <mantra xml:lang="Sa-Ltn">tadyathā oṃ prajñe
+                        <mantra xml:lang="Sa-Ltn">tadyathā | oṃ prajñe
                                                   prajñe mahāprajñe candraprajñe sarvaśāsakari
                                                   svāhā</mantra>
                     </p>
@@ -453,8 +456,8 @@
                                                 had said.</p>
                                         <milestone unit="chunk" xml:id="UT22084-034-015-33"/>
                                         <trailer tid="34">This concludes the noble Great Vehicle
-                                                sūtra, <title xml:lang="en">The Candragarbha
-                                                  Perfection of Wisdom</title>.</trailer>
+                                                sūtra <title xml:lang="en">“The Candragarbha
+                                                        Perfection of Wisdom</title>.”</trailer>
                                 </div>
                         </div>
                 </body>
@@ -489,10 +492,10 @@
                                 </div>
                                 <div type="section" xml:id="UT22084-034-015-listBibl-2">
                                         <head type="section" tid="41">Secondary Texts</head>
-                                        <bibl xml:id="UT22084-034-015-38">Conze, Edward. <title xml:lang="en">Perfect Wisdom: The Short
+                                        <bibl xml:id="UT22084-034-015-38">Conze, Edward (1973). <title xml:lang="en">Perfect Wisdom: The Short
                                                   Prajñāpāramitā Texts</title>. London: Luzac &amp;
                                                 Co., 1973.</bibl>
-                                        <bibl xml:id="UT22084-034-015-39">Conze, Edward. <title xml:lang="en">The Prajñāpāramitā
+                                        <bibl xml:id="UT22084-034-015-39">—‍—‍—(1978). <title xml:lang="en">The Prajñāpāramitā
                                                   Literature</title>. Tokyo: The Reiyukai,
                                                 1978.</bibl>
                                   <bibl xml:id="UT22084-034-015-65">Dharmachakra Translation Committee, trans. <title xml:lang="en">
