--- a/translations/kangyur/translations/091-062_toh665,1084-the_essence_of_ganapati.xml
+++ b/translations/kangyur/translations/091-062_toh665,1084-the_essence_of_ganapati.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-062-167">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -183,6 +183,12 @@
                 </change>
                 <change who="#martina-cotter" when="2023-11-14T13:45:28.247Z" type="text-version" status="1.0.1" xml:id="UT22084-091-062-171">
                     <desc>updated glossary.</desc>
+                </change>
+                <change who="#celso" when="2023-11-21T23:26:28.648Z" type="text-version" status="1.0.2" xml:id="UT22084-091-062-172">
+                    <desc>Corrected links to rKTs</desc>
+                </change>
+                <change who="#andre" when="2023-11-28T20:56:39.126Z" type="text-version" status="1.0.3" xml:id="UT22084-091-062-173">
+                    <desc>glossary integration in CG revised - activated in CG</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -674,9 +680,9 @@
                                                   Unit, Central Institute of higher Tibetan Studies,
                                                   1993. </bibl>
                                                 <bibl xml:id="UT22084-091-062-123">
-                            <title xml:lang="en">Resources for Kanjur &amp; Tenjur
+                            <title xml:lang="en">Resources for Kanjur and Tanjur
                                                   Studies</title>, Universität Wien, accessed May
-                                                  10, 2019. <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/sub/index.php">https://www.istb.univie.ac.at/kanjur/rktsneu/sub/index.php</ref>.</bibl>
+                                                        10, 2019. <ref target="http://www.rkts.org/">http://www.rkts.org</ref>.</bibl>
                                                 <bibl xml:id="UT22084-091-062-124">
                             <title xml:lang="en">The Buddhist Canons Research
                                                   Database</title>. American Institute of Buddhist
@@ -701,7 +707,7 @@
                                         </div>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-091-062-129">
